<resources>
    <string name="app_name">ProjectNewsBGN</string>
    <string name="welcomeText">Welcome to BGN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotPswText">Forget password? Click HERE.</string>
    <string name="login">Login</string>
    <string name="registerText">Don\'t have any account yet? Please register HERE.</string>
    <string name="remember_me">Remember me</string>
    <string name="account_name">Account Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="avatarSelectText">Please select an avatar.</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectCountryString">Please select a country</string>
    <string name="please_select_topic_of_interest">Please select topic of interest</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="countryList">countryList</string>
    <string name="welcome_here_you_can_create_an_account">Welcome, here you can create an Account</string>
    <string name="notificationTopics">Please select at least one topic</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="countryAccount">it</string>
    <string name="FireBaseDBLink">https://newsbgn-78fbd-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="sendmail">Send mail to retrieve password</string>
    <string name="RememberTrue">You will be remembered</string>
    <string name="RememberFalse">You will not be remembered</string>
    <string name="InvalidPassword">Invalid Password</string>
    <string name="InvalidMail">Invalid E-mail</string>
    <string name="RegistrationSuccess">You have been successfully registered</string>
    <string name="ErrorMessage" />
    <string name="PasswordErrorMatch">Passwords doesn\'t match</string>
    <string name="InvalidPassword2">Invalid password,at least 6 characters</string>
    <string name="InvalidEmail2">Invalid email</string>
    <string name="InvalidName">Invalid account name</string>
    <string name="EmailForgotPsw">E-mail sent, check your inbox please</string>
    <string name="ForgotPswError">E-mail format not valid</string>
    <string name="SettingFragmentMsg">Compile all forms</string>
    <string name="MustHaveTopic">general</string>
    <string name="SettingsName">Settings</string>
    <string name="NotificationMessage">Notifications</string>
    <string name="AppTitle">Homer</string>
    <string name="FullNewsAdvice">Click on the link to continue reading</string>
    <string name="FavNewsMsg">Check at least one news or click the delete icon</string>
    <string name="FavCancelError">Cancel error</string>
    <string name="Italy">Italy</string>
    <string name="France">France</string>
    <string name="UnitedKingdom">United kingdom</string>
    <string name="DefaultQuery" />
    <string name="SportTopic">sport</string>
    <string name="HealthTopic">health</string>
    <string name="ScienceTopic">science</string>
    <string name="BusinessTopic">business</string>
    <string name="EntertainmentTopic">entertainment</string>
    <string name="TechnologyTopic">technology</string>
    <string name="SearchTitle">Search News</string>
    <string name="imageDescription">NewsImage</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="date">Date</string>
    <string name="content">Content</string>
    <string name="share">Share</string>
    <string name="logo">Logo</string>
    <string name="welcomeText2">Welcome to Homer</string>
    <string name="Catchphrase">Always updated</string>
    <string name="author">Author</string>
    <string name="errorImage">ErrorImage</string>
    <string name="SelectNewsCb">Select news</string>
    <string name="delete">Delete</string>
    <string name="description">Description:</string>
    <string name="accountAvatar">AccountAvatar</string>
    <string name="heartLike">heartLike</string>
    <string name="favourite_articles">Favourite articles:</string>
    <string name="zero">0</string>
    <string name="country">Country</string>
    <string name="topic_of_interest">Topic of interst</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="update">Update</string>
    <string name="insert_your_e_mail_address">Insert your e-mail address</string>
    <string name="internetError">internetError</string>
    <string name="welcome_to_homer">Welcome to Homer</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="please_write_down_your_credentials">Please,write down your credentials</string>
    <string name="profileSettingsImage">ProfileSettingsImage</string>
    <string name="createAccountImage">CreateAccountImage</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="businessLogo">businessLogo</string>
    <string name="scienceLogo">scienceLogo</string>
    <string name="general">General</string>
    <string name="select_a_topic_or_make_a_request">Select a topic or make a request</string>
    <string name="searchImage">searchImage</string>
    <string name="entertainmentLogo">entertainmentLogo</string>
    <string name="healthLogo">healthLogo</string>
    <string name="sportLogo">sportLogo</string>
    <string name="technologyLogo">technologyLogo</string>
    <string name="generalLogo">generalLogo</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="italyCountry">Italy</string>
    <string name="franceCountry">France</string>
    <string name="unitedKingdomCountry">United kingdom</string>
    <string name="empty" />
    <string name="italyId">it</string>
    <string name="franceId">fr</string>
    <string name="unitedKingdomId">gb</string>
    <string name="ErrorFav2">Error,unable to save the news</string>

    <string-array name="CountryList">
        <item>England</item>
        <item>France</item>
        <item>Italy</item>
    </string-array>
</resources>